--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,11 @@ li {
 .header-nav-link {
   font-size: 36px;
 }
+@media (max-width: 900px) {
+  .header-nav-links-container {
+    display: none;
+  }
+}
 /* Header End */
 
 /* Homepage Start */
@@ -151,7 +156,51 @@ li {
 }
 /* About Page End */
 
-/* Footer Start */
+/* Trainers Page Start */
+.trainers-title {
+  text-align: center;
+  font-size: 3rem;
+}
+.trainers-cards-container {
+  width: 90vw;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+.trainer-card-container {
+  margin: 0.75rem;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 4px 12px;
+  width: 250px;
+  height: 400px;
+}
+.trainer-image {
+  display: block;
+  border: 2px solid var(--primary-color);
+  margin: 0.75rem auto 0.5rem auto;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
+.trainer-name {
+  font-size: 2rem;
+  text-align: center;
+}
+.trainer-position {
+  font-size: 1.5rem;
+  text-align: center;
+}
+.trainer-specialty {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+
+  font-size: 1rem;
+  text-align: center;
+}
+/* Trainers Page End */ /* Footer Start */
 .footer-container {
   position: relative;
   bottom: 0;
